mm/dd/17 richardjgowers, rathann, orbeckst, tylerjereddy, mtiberti, kain88-de,
         jbarnoud, nestorwendt

  * 0.17.0

Enhancements
  * Python versions 3.4 and upwards are now supported (Issue #260)
  * add low level lib.formats.libdcd module for reading/writing DCD (PR #1372)
  * replace old DCD reader with a Python 3 ready DCD reader (Issue #659)
  * The TPR parser populate the `moltypes` topology attribute and
    the `moltype` selection keyword is added (Issue #1555)
  * about 20% speed improvements for GNM analysis. (PR #1579)

Deprecations

Fixes
  * Fixed nuclinfo.tors() not converting delta (Issue #1572)
  * Changed _calc_dihedral and Dihedral.value() to match IUPAC convention
    (Issue #1565)
  * Fixed _calc_dihedral returning negative angles as positive (Issue #1554)
  * correctly read little-endian TRZ files on big-endian architectures (issue
    #1424)
  * Fixed type matching and inclusion compilation warnings for the
  ENCORE analysis package (issue #1390)
  * Fix extra deprecation warnings for instant segment and residue selectors
    (Issue #1476)
  * Accessing segments from a universe with an instant selector now issues a
    deprecation warning as expected (Issue #1478)
  * Fixed Angle.angle method return NaN values when angle was very close
    to 180 degrees (Issue #1556)

Changes
  * remove deprecated TimeSeriesCollection
  * remove deprecated analysis.align.rms_fit_trj
  * remove deprecated analysis.contacts.ContactAnalysis
  * remove deprecated analysis.contacts.ContactAnalysis1
  * remove deprecated analysis.hbonds.hbond_analysis 1-indexing
  * remove deprecated analysis.rms `target` keyword from functions
  * use fast scipy.io.netcdf pure python implementation for reading of Amber
    netcdf3 trajctories instead of netCDF4 but use netCDF4 for fast
    writing (if available) or fall back to netcdf (see also Issue #506)
  * libmdaxdr classes now accept more argument types for a write (PR #1442)